--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "puppeteer": "^24.0.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "stream-json": "^1.9.1"
   }
 }
