--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@turf/turf": "^7.2.0",
     "cheerio": "^1.0.0",
+    "csv-stringify": "^6.5.2",
     "fs": "^0.0.1-security",
     "puppeteer": "^24.0.0",
     "puppeteer-extra": "^3.3.6",
