--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js marssfain env false false true"
+    "start": "node index.js marssfain env false true false"
   },
   "author": "prince-raj",
   "license": "ISC",
   "dependencies": {
     "@turf/turf": "^7.2.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "child_process": "^1.0.2",
+    "csv-parser": "^3.2.0",
     "csv-stringify": "^6.5.2",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "mysql2": "^3.12.0",
