--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js marssfain env false false false true"
+    "start": "node index.js marssfain env true false false false"
   },
   "author": "prince-raj",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
+    "json2csv": "^6.0.0-alpha.2",
     "mysql2": "^3.12.0",
     "npm": "^11.1.0",
     "puppeteer": "^24.0.0",
