--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "prince-raj",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
     "@turf/turf": "^7.2.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
