--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js marssfain env false false true true"
+    "start": "node index.js marssfain env false true false false"
   },
   "author": "prince-raj",
   "license": "ISC",
